--- a/style.css
+++ b/style.css
@@ -922,7 +922,7 @@ header {
   bottom: 0;
   background-size: cover;
   width: 100%;
-  background-color: transparent;
+  background-color: #ffffff6b;
   height: 100%;
   background-position: center;
   z-index: 3;
